# tjaele

./: Cargo.toml  README.md  example_config.toml  install.sh  rustfmt.toml  tjaele.service
old-src/: control.rs  gpu_manager.rs
src/: control.rs  gpu_manager.rs  intermediate_bindings.rs  main.rs  monitor.rs
src/gpu_manager/: device_probe.rs  fan_control.rs  fan_curve.rs  intermediate_bindings.rs  tui_text.rs
src/monitor/: tui_blocks.rs
tjaele/: Cargo.toml
tjaele-types/: Cargo.toml
tjaele-types/src/: lib.rs  nvml_integration.rs
tjaele/src/: app.rs  main.rs  tui.rs
tjaele/src/app/: events.rs
tjaele/src/tui/: events.rs
tjaele_types/: Cargo.toml
tjaele_types/src/: impls.rs  lib.rs
tjaeled/: Cargo.toml
tjaeled/src/: gpu_manager.rs  main.rs
tjaeled/src/gpu_manager/: device_probe.rs  fan_curve.rs  intermediate_bindings.rs
utils/: install.sh  tjaele.service
utlis/: tjaele.service
