[package]
name = "tjaele"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.95", default-features = false, features = ["std"] }
clap = { version = "4.5.26", default-features = true, features = ["derive"] }
nvml-wrapper = { git = "https://github.com/Quba1/nvml-wrapper.git", default-features = false, features = [
    "serde",
] }
nvml-wrapper-sys = { version = "0.8.0", default-features = true }
pretty-bytes = { version = "0.2.2", default-features = false }
ratatui = { version = "0.29.0", default-features = false, features = [
    "crossterm",
] }
crossterm = { version = "0.28.1", default-features = false }
chrono = { version = "0.4.39", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
tokio = { version = "1.43.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }
actix-web = { version = "4.9.0", default-features = false, features = [
    "compat",
    "macros",
] }
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
ouroboros = { version = "0.18.5", default-features = false, features = ["std"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
serde_with = { version = "3.12.0", default-features = false, features = [
    "std",
    "macros",
] }
rustc-hash = { version = "2.1.0", default-features = false, features = ["std"] }
derive_more = { version = "1.0.0", default-features = false, features = [
    "std",
    "display",
] }

tracing = { version = "0.1.41", default-features = true }
tracing-subscriber = { version = "0.3.19", default-features = true }

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
