[workspace]
members = ["tjaele", "tjaeled", "tjaele_types"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.95", default-features = false, features = ["std"] }
clap = { version = "4.5.26", default-features = true, features = ["derive"] }
nvml-wrapper = { git = "https://github.com/Quba1/nvml-wrapper.git", default-features = false }
nvml-wrapper-sys = { version = "0.8.0", default-features = true }
pretty-bytes = { version = "0.2.2", default-features = false }
ratatui = { version = "0.29.0", default-features = false, features = [
    "crossterm",
] }
crossterm = { version = "0.28.1", default-features = false }
chrono = { version = "0.4.39", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
tokio = { version = "1.43.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
    "net",
] }
tokio-util = { version = "0.7.13", default-features = false }
ouroboros = { version = "0.18.5", default-features = false, features = ["std"] }

serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_with = { version = "3.12.0", default-features = false, features = [
    "std",
    "macros",
] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
serde_json = {version = "1.0.135", default-features = false, features = ["std"]}

rustc-hash = { version = "2.1.0", default-features = false, features = ["std"] }
derive_more = { version = "1.0.0", default-features = false, features = [
    "std",
    "display",
] }

tracing = { version = "0.1.41", default-features = true }
tracing-subscriber = { version = "0.3.19", default-features = true }
tracing-log = { version = "0.2.0", default-features = true }

hyper = { version = "1.5.2", default-features = false, features = [
    "http1",
    "server",
] }
hyper-util = { version = "0.1.10", default-features = false, features = [
    "tokio",
] }
http-body-util = { version = "0.1.2", default-features = false }

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1

[workspace.lints.clippy]
pedantic = "warn"
cargo = "warn"
perf = "warn"
must_use_candidate = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
multiple_crate_versions = "allow"
