[package]
name = "tjaele"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
pretty-bytes = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true, features = ["client"] }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }

tjaele_types = { path = "../tjaele_types" }
