[package]
name = "tjaele_types"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
nvml-wrapper = { workspace = true, optional = true }
serde = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
serde_with = { workspace = true }

[features]
default = []
nvml_types = ["dep:nvml-wrapper"]
