[package]
name = "tjaele_types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
nvml-wrapper = { workspace = true, optional = true }
serde = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
serde_with = { workspace = true }

[features]
default = []
nvml_types = ["dep:nvml-wrapper"]
