[package]
name = "tjaeled"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
nvml-wrapper = { workspace = true }
nvml-wrapper-sys = { workspace = true }
ouroboros = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
tokio-util = { workspace = true }

tjaele_types = { path = "../tjaele_types", features = ["nvml_types"] }
