[package]
name = "tjaeled"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
nvml-wrapper = { workspace = true }
nvml-wrapper-sys = { workspace = true }
ouroboros = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
tokio-util = { workspace = true }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }

tjaele_types = { path = "../tjaele_types", features = ["nvml_types"] }
